adds start of section about ARI robot

--- a/report/report.tex
+++ b/report/report.tex
@@ -43,20 +43,13 @@ School of Mathematics and Computer Science, Heriot-Watt University, Edinburgh \\
 \begin{document}
 \maketitle
 \begin{abstract}
-  This document contains the instructions for preparing a camera-ready
-  manuscript for the proceedings of ACL-2016. The document itself
-  conforms to its own specifications, and is therefore an example of
-  what your manuscript should look like. These instructions should be
-  used for both papers submitted for review and for final versions of
-  accepted papers.  Authors are asked to conform to all the directions
-  reported in this document.
+  This should be a 6-8 page conference paper with appendices, if relevant. 
 \end{abstract}
 
 
 \section{Introduction}
 \label{sec:introduction}
 
-This should be a 6-8 page conference paper with appendices, if relevant. 
 \textit{from coursework spec:} main research or technical question addressed
 
 
@@ -69,9 +62,9 @@ This should be a 6-8 page conference paper with appendices, if relevant.
 \label{subsec:socially_assistive_robots}
 Socially assistive robots (SARs) are a crucial part of the future of many sectors, for example, in education or healthcare \cite{gunson_visually_aware_2022}. Especially the latter depends on technology advancements as it is facing numerous obstacles in the futures, such as increasing spendings and a growing number of older people. A lack of healthcare workers is predicted to happen soon \cite{cooper_ari_2020}. SARs have the capability to alleviate these challenges in supporting healthcare by encouraging older people to keep living independently and reducing emergency visits. Thus, SARs can decrease healthcare costs and relieve the load of healthcare workers \cite{cooper_ari_2020}. 
 
-\subsection{Spring-ARI}
+\subsection{Requirements of an SAR in healthcare}
 \label{subsec:spring_ari}
-The difficulty of designing such
+The difficulty of designing such a SAR lies in creating robots that can effectively converse with humans and adhere to social norms \cite{moujahid_multi_party_2022}. This requires multiple parts to be combined in one conversational system, which needs to be able to carry out visually grounded dialogue, to perform task-based dialogues, to perceive and discuss its environment and to chit-chat. 
 
 
 \section{Design and Implementation}
