adds missing year definitions

--- a/report/references.bib
+++ b/report/references.bib
@@ -24,6 +24,7 @@
 	author = {Moujahid, Meriam and Hastie, Helen and Lemon, Oliver},
 	date = {2022-03},
 	keywords = {multi-party interaction, Robot kinematics, robot receptionist, situated interaction, Social robots},
+	year = {2022},
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\Laura\\Zotero\\storage\\ZW7LIZSK\\stamp.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\Laura\\Zotero\\storage\\2JF457KK\\Moujahid et al. - 2022 - Multi-party Interaction with a Robot Receptionist.pdf:application/pdf},
 }
 
