[ADD] Improved and added to the literature review

--- a/report/references.bib
+++ b/report/references.bib
@@ -64,6 +64,7 @@
 	urldate = {2023-01-30},
 	date = {2020-12},
 	file = {Full Text PDF:C\:\\Users\\Laura\\Zotero\\storage\\GWN8LYSN\\Addlesee et al. - 2020 - A Comprehensive Evaluation of Incremental Speech R.pdf:application/pdf},
+	year={2020}
 }
 
 @article{gu_who_nodate,
@@ -83,14 +84,14 @@
 	shorttitle = {Turn-taking in Conversational Systems and Human-Robot Interaction},
 	abstract = {The taking of turns is a fundamental aspect of dialogue. Since it is difficult to speak and listen at the same time, the participants need to coordinate who is currently speaking and when the next person can start to speak. Humans are very good at this coordination, and typically achieve fluent turn-taking with very small gaps and little overlap. Conversational systems (including voice assistants and social robots), on the other hand, typically have problems with frequent interruptions and long response delays, which has called for a substantial body of research on how to improve turn-taking in conversational systems. In this review article, we provide an overview of this research and give directions for future research. First, we provide a theoretical background of the linguistic research tradition on turn-taking and some of the fundamental concepts in theories of turn-taking. We also provide an extensive review of multi-modal cues (including verbal cues, prosody, breathing, gaze and gestures) that have been found to facilitate the coordination of turn-taking in human-human interaction, and which can be utilised for turn-taking in conversational systems. After this, we review work that has been done on modelling turn-taking, including end-of-turn detection, handling of user interruptions, generation of turn-taking cues, and multi-party human-robot interaction. Finally, we identify key areas where more research is needed to achieve fluent turn-taking in spoken interaction between man and machine.},
 	pages = {101178},
-	journaltitle = {Computer Speech \& Language},
-	shortjournal = {Computer Speech \& Language},
+	journal = {Computer Speech and Language},
 	author = {Skantze, Gabriel},
 	urldate = {2023-01-30},
 	date = {2021-05-01},
 	langid = {english},
 	keywords = {Dialogue systems, Gaze, Prosody, Social robotics, Turn-taking},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\Laura\\Zotero\\storage\\RCQIG5NU\\Skantze - 2021 - Turn-taking in Conversational Systems and Human-Ro.pdf:application/pdf},
+	year={2021},
 }
 
 @inproceedings{porcheron_animals_2017,
@@ -127,3 +128,14 @@
 	year = {2020},
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\Laura\\Zotero\\storage\\8VJEILTT\\stamp.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\Laura\\Zotero\\storage\\35CYUM9Q\\Cooper et al. - 2020 - ARI the Social Assistive Robot and Companion.pdf:application/pdf},
 }
+
+@misc{Health_workforce_2023, 
+	url={https://www.who.int/health-topics/health-workforce}, 
+	title={Global Health Workforce Statistics},
+	author={WHO},
+	abstractNote={Health systems can only function with health workers; improving health service coverage and realizing the right to the enjoyment of the highest attainable standard of health is dependent on their availability, accessibility, acceptability and quality.}, 
+	language={en}, 
+	urldate={2023-02-07}, 
+	year={2023}
+}
+
