[IMP] structure of Background

--- a/report/report.tex
+++ b/report/report.tex
@@ -60,11 +60,20 @@ School of Mathematics and Computer Science, Heriot-Watt University, Edinburgh \\
 
 \subsection{Socially Assistive Robots} % TODO: change "predicted to happen soon"
 \label{subsec:socially_assistive_robots}
-Socially assistive robots (SARs) are a crucial part of the future of many sectors, for example, in education or healthcare \cite{gunson_visually_aware_2022}. Especially the latter depends on technology advancements as it is facing numerous obstacles in the future, such as increasing spendings and a growing percentage of older people. A serious lack of healthcare workers is already occurring, with 10 million more healthworkers needed worldwide by 2030 \cite{cooper_ari_2020,Health_workforce_2023}. SARs have the capability to healthcare in various ways, such as encouraging older people to keep living independently or reducing emergency visits \cite{cooper_ari_2020}. Previously, development has been conducted on a SAR robot deployed in an eldercare hospital reception area \cite{addlesee_comprehensive_2020}. 
+Socially assistive robots (SARs) are a crucial part of the future of many sectors, for example, in education or healthcare \cite{gunson_visually_aware_2022}. Especially the latter depends on technology advancements as it is facing numerous obstacles in the future, such as increasing spendings and a growing percentage of older people. A serious lack of healthcare workers is already occurring, with 10 million more healthworkers needed worldwide by 2030 \cite{cooper_ari_2020,Health_workforce_2023}. SARs have the capability to healthcare in various ways, such as encouraging older people to keep living independently or reducing emergency visits \cite{cooper_ari_2020}.
+
+\subsection{SPRING-ARI}
+\label{subsec:spring_ari}
+Previously, development has been conducted on a SAR robot deployed in an eldercare hospital reception area \cite{addlesee_comprehensive_2020}. \\
+\textit{Explain what has been done so far with SPRING-ARI.}
 
 \subsection{Requirements of a SAR in healthcare}
-\label{subsec:spring_ari}
+\label{subsec:SAR_requirements}
 The difficulty of designing such a SAR lies in creating robots that can effectively converse with humans and adhere to social norms \cite{moujahid_multi_party_2022}. More expressive robots seem more intelligent, conscious and polite to the people that interact with it \cite{moujahid_multi_party_2022}. To achieve this positive perception, multiple parts need to be combined into one conversational system, such as the ability to carry out visually grounded as well as task-based dialogues, to perceive and discuss its environment and to chit-chat \cite{gunson_visually_aware_2022}. In particular, multi-party engagement and fluent-turn taking in multi-party environments is becoming more important as dialogue systems improve beyond simpler task-based systems \cite{skantze_turn_taking_2021}. However, state-of-the-art models for training such robots are still too simplistic \cite{skantze_turn_taking_2021}. There is a need to 
+
+\subsection{State-of-the-art Tools}
+\label{subsec:tools}
+\textit{Explain what tools we'll be using}
 
 
 \section{Design and Implementation}
