[ADD] restructuring and adding description of SPRING-ARI to literature review

--- a/report/references.bib
+++ b/report/references.bib
@@ -28,7 +28,7 @@
 	file = {IEEE Xplore Abstract Record:C\:\\Users\\Laura\\Zotero\\storage\\ZW7LIZSK\\stamp.html:text/html;IEEE Xplore Full Text PDF:C\:\\Users\\Laura\\Zotero\\storage\\2JF457KK\\Moujahid et al. - 2022 - Multi-party Interaction with a Robot Receptionist.pdf:application/pdf},
 }
 
-@online{diekmann_1_nodate,
+@misc{diekmann_1_nodate,
 	title = {1. Slurk: What’s this? — slurk 2.0.0 documentation},
 	url = {https://clp-research.github.io/slurk/slurk_about.html#slurk-about},
 	author = {Diekmann, Tim},
@@ -135,7 +135,16 @@
 	author={WHO},
 	abstractNote={Health systems can only function with health workers; improving health service coverage and realizing the right to the enjoyment of the highest attainable standard of health is dependent on their availability, accessibility, acceptability and quality.}, 
 	language={en}, 
-	urldate={2023-02-07}, 
+	note={Accessed on: 2023-02-07}, 
 	year={2023}
+}
+
+@misc{palrobot, 
+	title={ARI - The social and collaborative robot}, 
+	url={https://pal-robotics.com/robots/ari/}, 
+	author={Pal Robotics}, 
+	language={en-US}, 
+	year={2023},
+	note={Accessed on: 2023-02-08}
 }
 
