--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -79,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "F21BC",
    "language": "python",
    "name": "python3"
   },
@@ -93,12 +93,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f9c4317fb4c0bcd22c37535845f14af50b164d23d0409d29c3259dbf20f1ce70"
+    "hash": "e301f179994a6cc4696bb1a697aabf365a0e561b8ee640f0fafd7f18f35040ab"
    }
   }
  },
