[IMP] add descriptions for each annotation

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -63,23 +63,26 @@
    "source": [
     "## Filtering and Sorting Different Annotations  \n",
     "\n",
-    "**Possible Annotations:**\n",
-    "- _[question]_\n",
-    "- _[options]_\n",
-    "- _[accept-answer]_\n",
-    "- [offer-answer()]\n",
-    "- [offer-to-answer]\n",
-    "- [check-answer]\n",
-    "- [agreement]\n",
-    "- [ask-agreement]\n",
-    "- [chit-chat]\n",
-    "- [final-answer()]\n",
-    "- [confirm-agreement]\n",
-    "- [confirm-final-answer()]\n",
-    "- [reject-option()]\n",
-    "- [reject-option-agreement()]\n",
+    "**Possible Annotations:**  \n",
+    "Robot to Users (only use these four for the robot + possibly [chit-chat]):  \n",
+    "- _[question]_: Robot asking the question\n",
+    "- _[options]_: Robot giving the answer options to the question\n",
+    "- _[accept-answer]_: Robot confirming that it has received the answer\n",
+    "- _[confirm-agreement]_: Robot asks if the users have agreed, eg. \"Final answer?\" \n",
     "\n",
-    "_Italic_ are host annotations only"
+    "User to Robot: \n",
+    "- [final-answer()]: A user offering the final answer to the host (as opposed to the other person)\n",
+    "- [confirm-final-answer()]: A user confirms to the robot that it is the final answer they want to submit \n",
+    "\n",
+    "User to User: \n",
+    "- [offer-answer()]: One of the users offers a specific answer to the other user\n",
+    "- [offer-to-answer]: One of the users says that they would like to answer (without providing a specific answer), eg. \"I think I know this one\" \n",
+    "- [check-answer]: A user checks if the other user knows the answer, eg. \"You know this, right?\"\n",
+    "- [agreement]: General agreement, eg. \"Yeah\"\n",
+    "- [ask-agreement]: A user asking the other user for agreement, eg. \"Do you think so too?\"\n",
+    "- [chit-chat]: Non-related talk between the users\n",
+    "- [reject-option()]: A user eliminates one of the answer option, eg. \"It's definitely not Germany\" \n",
+    "- [reject-option-agreement()]: A user agrees to reject an option, eg. \"Yeah, definitely not\""
    ]
   },
   {
@@ -226,12 +229,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4cf7421125f24179b95e2c7baa70e66f2436afd0742d4df4d6b3d32c45f1ff8c"
+    "hash": "853f01df416f9b6b452f137e2a36198d6e629a7bb44a1f05230e2b1718f523f7"
    }
   }
  },
