--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +181,7 @@
     "    check_answer,\n",
     "    agreement,\n",
     "    ask_agreement,\n",
-    "    chit_chat,\n",
-    "    confirm_agreement\n",
+    "    chit_chat\n",
     "]\n",
     "\n",
     "trainingDataInput = [\n",
@@ -205,7 +204,9 @@
     "for annotation in trainingDataInput:\n",
     "    file.write(\"- intent: \" + annotation.pop(0) + \"\\n  examples: |\\n\")\n",
     "    for example in annotation:\n",
-    "        example[0].replace(example[1], \"[\" + example[1] + \"]\")\n",
+    "        example[0] = example[0].lower()\n",
+    "        example[1] = example[1].lower()\n",
+    "        example[0] = example[0].replace(example[1], \"[\" + example[1] + \"](answer)\")\n",
     "        file.write(\"    - \" + example[0] + \"\\n\")\n",
     "    file.write(\"\\n\")\n",
     "\n",
