Updated training data and script

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['transcript_10.txt', 'transcript_22.txt', 'transcript_44.txt', 'transcript_56.txt']\n"
+      "['transcript_10.txt', 'transcript_22.txt', 'transcript_23.txt', 'transcript_24.txt', 'transcript_44.txt', 'transcript_56.txt']\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +111,19 @@
     "\n",
     "for fileName in completedTranscripts:\n",
     "    file = open(\"./data/transcripts/\" + fileName, \"r\")\n",
-    "    for i in range(0, 15):\n",
-    "        file.readline()\n",
+    "\n",
+    "    line = file.readline()\n",
+    "    while (line[:28] != \"-------- Transcript --------\"):\n",
+    "        line = file.readline()\n",
+    "    file.readline()\n",
     "\n",
     "    for line in file:\n",
     "        if (line[0] == 'S'):\n",
     "            line = line[3:]\n",
     "        elif (line[0] == 'U'):\n",
     "            line = line[4:]\n",
+    "        else:\n",
+    "            continue\n",
     "\n",
     "        annotation = line[line.find(\n",
     "            '['):line.find(']') + 1].replace(\" \", \"\")[1:-1]\n",
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,12 +235,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "853f01df416f9b6b452f137e2a36198d6e629a7bb44a1f05230e2b1718f523f7"
+    "hash": "4cf7421125f24179b95e2c7baa70e66f2436afd0742d4df4d6b3d32c45f1ff8c"
    }
   }
  },
