Wokring on transcript 2

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,14 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['transcript_10.txt', 'transcript_22.txt', 'transcript_23.txt', 'transcript_24.txt', 'transcript_44.txt', 'transcript_56.txt']\n"
+      "Number of annotated transcripts: 8\n",
+      "Annotated Transcripts:\n",
+      " - transcript_1.txt\n",
+      " - transcript_10.txt\n",
+      " - transcript_22.txt\n",
+      " - transcript_23.txt\n",
+      " - transcript_24.txt\n",
+      " - transcript_44.txt\n",
+      " - transcript_56.txt\n",
+      " - transcript_74.txt\n"
      ]
     }
    ],
@@ -49,11 +58,14 @@
     "    if (complete == \"Complete\"):\n",
     "        completedTranscripts.append(fileName)\n",
     "\n",
-    "    # Closing files\n",
+    "    # Cleanup\n",
     "    file.close()\n",
     "\n",
-    "# Sanity Check\n",
-    "print(completedTranscripts)"
+    "# List of annotated transcripts\n",
+    "print(\"Number of annotated transcripts:\", len(completedTranscripts))\n",
+    "print(\"Annotated Transcripts:\")\n",
+    "for i in completedTranscripts:\n",
+    "    print(\" -\", i)"
    ]
   },
   {
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,15 +121,19 @@
     "reject_option = [\"reject-option\"]\n",
     "reject_option_agreement = [\"reject-option-agreement\"]\n",
     "\n",
+    "# For every file\n",
     "for fileName in completedTranscripts:\n",
     "    file = open(\"./data/transcripts/\" + fileName, \"r\")\n",
     "\n",
+    "    # Parse the unimportant lines until \"Transcript\"\n",
     "    line = file.readline()\n",
     "    while (line[:28] != \"-------- Transcript --------\"):\n",
     "        line = file.readline()\n",
     "    file.readline()\n",
     "\n",
+    "    # For every line in the transcript\n",
     "    for line in file:\n",
+    "        # Remove the user and system tags\n",
     "        if (line[0] == 'S'):\n",
     "            line = line[3:]\n",
     "        elif (line[0] == 'U'):\n",
@@ -125,9 +141,11 @@
     "        else:\n",
     "            continue\n",
     "\n",
+    "        # Extract the annotation\n",
     "        annotation = line[line.find(\n",
     "            '['):line.find(']') + 1].replace(\" \", \"\")[1:-1]\n",
-    "\n",
+    "        \n",
+    "        # Match the annotation to its array\n",
     "        if (annotation == \"question\"):\n",
     "            question.append(line[:line.find(\"[\") - 1])\n",
     "        elif (annotation == \"options\"):\n",
@@ -147,6 +165,7 @@
     "        elif (annotation == \"confirm-agreement\"):\n",
     "            confirm_agreement.append(line[:line.find(\"[\") - 1])\n",
     "        else:\n",
+    "            # For annotations with inputs\n",
     "            annotationName = annotation[:annotation.find('(')]\n",
     "            if (annotationName == \"offer-answer\"):\n",
     "                offer_answer.append([line[:line.find(\n",
@@ -163,7 +182,8 @@
     "            elif (annotationName == \"reject-option-agreement\"):\n",
     "                reject_option_agreement.append([line[:line.find(\n",
     "                    \"[\") - 1], annotation[annotation.find('(') + 1:annotation.find(')')]])\n",
-    "\n",
+    "                \n",
+    "    # Cleanup\n",
     "    file.close()\n"
    ]
   },
@@ -177,10 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Annotations with inputs\n",
     "trainingDataNoInput = [\n",
     "    offer_to_answer,\n",
     "    check_answer,\n",
@@ -189,6 +210,7 @@
     "    chit_chat\n",
     "]\n",
     "\n",
+    "# Annotations without inputs\n",
     "trainingDataInput = [\n",
     "    offer_answer,\n",
     "    final_answer,\n",
@@ -197,15 +219,18 @@
     "    reject_option_agreement\n",
     "]\n",
     "\n",
+    "# Create a new file and add the proper formatting to the beginning\n",
     "file = open(\"./RASA_Training_Data/nlu.txt\", \"w\")\n",
     "file.write(\"version: \\\"3.1\\\"\\n\\nnlu:\\n\")\n",
     "\n",
+    "# Write all the examples of annotations to the file in the right format\n",
     "for annotation in trainingDataNoInput:\n",
     "    file.write(\"- intent: \" + annotation.pop(0) + \"\\n  examples: |\\n\")\n",
     "    for example in annotation:\n",
     "        file.write(\"    - \" + example + \"\\n\")\n",
     "    file.write(\"\\n\")\n",
     "\n",
+    "# Write all the examples of annotations to the file in the right format with inputs as entities\n",
     "for annotation in trainingDataInput:\n",
     "    file.write(\"- intent: \" + annotation.pop(0) + \"\\n  examples: |\\n\")\n",
     "    for example in annotation:\n",
@@ -215,7 +240,8 @@
     "        file.write(\"    - \" + example[0] + \"\\n\")\n",
     "    file.write(\"\\n\")\n",
     "\n",
-    "file.close()\n"
+    "# Cleanup\n",
+    "file.close()"
    ]
   }
  ],
