reformatted the transcripts properly

--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,23 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of annotated transcripts: 8\n",
+      "Number of annotated transcripts: 14\n",
       "Annotated Transcripts:\n",
       " - transcript_1.txt\n",
       " - transcript_10.txt\n",
       " - transcript_22.txt\n",
       " - transcript_23.txt\n",
       " - transcript_24.txt\n",
+      " - transcript_34.txt\n",
+      " - transcript_35.txt\n",
       " - transcript_44.txt\n",
+      " - transcript_54.txt\n",
       " - transcript_56.txt\n",
-      " - transcript_74.txt\n"
+      " - transcript_74.txt\n",
+      " - transcript_100.txt\n",
+      " - transcript_101.txt\n",
+      " - transcript_102.txt\n"
      ]
     }
    ],
@@ -99,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
