--- a/test_data_formatting.ipynb
+++ b/test_data_formatting.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Natural Language Understanding (NLU):"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Filtering and Sorting Different Annotations  \n",
     "\n",
     "**Possible Annotations:**  \n",
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +256,49 @@
     "\n",
     "# Cleanup\n",
     "file.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dialogue Managment (Stories):"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting Stories from Transcripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stories = []\n",
+    "\n",
+    "for fileName in completedTranscripts:\n",
+    "    file = open(\"./data/transcripts/\" + fileName, \"r\")\n",
+    "\n",
+    "    # Parse the unimportant lines until \"Transcript\"\n",
+    "    line = file.readline()\n",
+    "    while (line[:28] != \"-------- Transcript --------\"):\n",
+    "        line = file.readline()\n",
+    "    file.readline()\n",
+    "\n",
+    "    # For every line in the transcript\n",
+    "    for line in file:\n",
+    "        # Extract the annotation\n",
+    "        annotation = line[line.find(\n",
+    "            '['):line.find(']') + 1].replace(\" \", \"\")[1:-1]\n",
+    "    \n",
+    "    # Cleanup\n",
+    "    file.close()"
    ]
   }
  ],
