[ADD] parts of lit review

--- a/report/report.tex
+++ b/report/report.tex
@@ -64,7 +64,7 @@ Socially assistive robots (SARs) are a crucial part of the future of many sector
 
 \subsection{SPRING-ARI}
 \label{subsec:spring_ari}
-The difficulty of designing such a SAR lies in creating robots that can effectively converse with humans and adhere to social norms \cite{moujahid_multi_party_2022}. More expressive robots seem more intelligent, conscious and polite to the people that interact with it \cite{moujahid_multi_party_2022}. To achieve this positive perception, multiple parts need to be combined into one conversational system, such as the ability to carry out visually grounded as well as task-based dialogues, to perceive and discuss its environment and to chit-chat \cite{gunson_visually_aware_2022}. In particular, a combination of a SAR with a spoken dialogue system is still rare. Previously, research has been conducted on a SAR robot deployed in an eldercare hospital reception area in the course of the SPRING research project \cite{addlesee_comprehensive_2020}. SPRING-ARI is deployed on a humanoid robot, called ARI, produced by Pal Robotics \cite{palrobot}. The design of ARI is focused on a few key factors: mobility, lightness, safety, simplicity, and modernity \cite{cooper_ari_2020}. The particular robot which is used for SPRING-ARI is equipped with a touch screen on its torso, gaze control through LCD eyes (liquid crystal display eyes) and 360° view. Its capabilities can be extended with custom AI algorithms, in the case of SPRING-ARI a visual perception system, a dialogue system, and a social interaction planner \cite{addlesee_comprehensive_2020}. While the SPRING-ARI system successfully demonstrates that task-based, social and visually grounded dialogue can be combined with physical actions, it still lacks the ability to handle conversations with more than one person simultaneously \cite{addlesee_comprehensive_2020}. 
+The difficulty of designing such a SAR lies in creating robots that can effectively converse with humans and adhere to social norms \cite{moujahid_multi_party_2022}. The more expressive a robot is, the more it will be perceived as intelligent, conscious and polite \cite{moujahid_multi_party_2022}. To achieve this positive perception, multiple parts need to be combined into one conversational system, such as the ability to carry out visually grounded as well as task-based dialogues, to perceive and discuss its environment and to chit-chat \cite{gunson_visually_aware_2022}. In particular, a combination of a SAR with a spoken dialogue system is still rare. Research concerning such a system has been conducted on a SAR robot deployed in an eldercare hospital reception area in the course of the SPRING research project \cite{addlesee_comprehensive_2020}. SPRING-ARI is deployed on a humanoid robot, called ARI, produced by Pal Robotics \cite{palrobot}. The design of ARI is focused on a few key factors: mobility, lightness, safety, simplicity, and modernity \cite{cooper_ari_2020}. The particular robot which is used for SPRING-ARI is equipped with a touch screen on its torso, gaze control through LCD eyes (liquid crystal display eyes) and 360° view. Its capabilities can be extended with custom AI algorithms, in the case of SPRING-ARI a visual perception system, a dialogue system, and a social interaction planner \cite{addlesee_comprehensive_2020}. While the SPRING-ARI system successfully demonstrates that task-based, social and visually grounded dialogue can be combined with physical actions, it still lacks the ability to handle conversations with more than one person simultaneously \cite{addlesee_comprehensive_2020}. 
 
 \subsection{Multi-party Human Robot Interaction}
 \label{subsec:multi_party}
